--- a/Lectures/Lec1.slides.html
+++ b/Lectures/Lec1.slides.html
@@ -14595,8 +14595,10 @@ Life of the universe is 4.10e+17 s
 <p>The deviation of a measurement from the “correct” value is termed the error, so error is a measurement of how inaccurate our results are. There are two general types of errors.</p>
 <p><strong>Systematic Errors</strong></p>
 <ul>
-<li>A error that is constant from one measurement to another, for example, an incorrectly marked ruler would always make the same mistake measuring something as either bigger or smaller than it actually is every time. These errors can be quite difficult to eliminate!
-<strong>Random Errors</strong></li>
+<li>A error that is constant from one measurement to another, for example, an incorrectly marked ruler would always make the same mistake measuring something as either bigger or smaller than it actually is every time. These errors can be quite difficult to eliminate!</li>
+</ul>
+<p><strong>Random Errors</strong></p>
+<ul>
 <li>Random errors in your measurement occur statistically, ie. they deviate from the correct value in both directions. These can be reduced by repeated measurement.</li>
 </ul>
 <p>But here is where it gets confusing… When you estimate the uncertainty of your measurement, as you will do frequently in the lab component of this course, you should consider the possible sources of error that contribute to the uncertainty. This way if there are large sources of error in your experiment, you will have a large uncertainty which will not exclude the accurate value of the quantity you are trying to measure.</p>
